# ur5_hand-e_description

robotiq_hande_gripper_description/: CMakeLists.txt  package.xml
robotiq_hande_gripper_description/launch/: load_ur3_hande-copy.launch  load_ur5_hande.launch  load_ur5_solo.launch
robotiq_hande_gripper_description/meshes/: coupling.dae  hand-e.dae
robotiq_hande_gripper_description/urdf/: robotiq_hande.urdf  robotiq_hande.urdf.xacro  robotiq_hande_world.urdf.xacro  ur-hande.xacro  ur5-solo.xacro
ur5e_moveit_config/config/: joint_limits.yaml  ros_controllers.yaml  sensors_moveit.yaml  ur5e.srdf
ur5e_moveit_config/launch/: kinect.launch  kopro_moveIt.launch  moveit.rviz  moveit_rviz.launch  planning_context.launch  sensor_manager.launch.xml  ur5e_moveit_planning_execution.launch
ur_description/: package.xml
ur_description/config/ur5e/: calib_kinematics.yaml  joint_limits.yaml  visual_parameters_min.yaml
ur_description/launch/: load_ur_hande.launch
ur_description/meshes/ur5e/collision_min/: base_min.stl  forearm_min.stl  shoulder_min.stl  upperarm_min.stl  wrist1_min.stl  wrist2_min.stl  wrist3_min.stl
ur_description/urdf/: ur-hande.urdf  ur-hande.xacro
ur_description/urdf/inc/: ur_macro.xacro
ur_kinematics/: CMakeLists.txt  ur_moveit_plugins.xml
